// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Tab 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
  border-bottom: solid 2px #000000;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 2px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
  border-bottom: solid 2px #E15151;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 2px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c6 {
  font-size: 12px;
  line-height: 16px;
  color: #444444;
}

.c8 {
  font-size: 12px;
  line-height: 16px;
  color: #E15151;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
}

.c5:hover {
  color: #000000;
}

.c9 {
  min-height: 0;
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    border-bottom: solid 2px #000000;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    border-bottom: solid 2px #E15151;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    padding-bottom: 2px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    role="tablist"
  >
    <div
      className="c2 "
    >
      <button
        aria-expanded={true}
        aria-selected={true}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c4 c5"
        >
          <span
            className="c6"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-selected={false}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c7 c5"
        >
          <span
            className="c8"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      className="c9"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs change to second tab 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
  border-bottom: solid 2px #000000;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 2px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
  border-bottom: solid 2px #E15151;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 2px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c6 {
  font-size: 12px;
  line-height: 16px;
  color: #444444;
}

.c8 {
  font-size: 12px;
  line-height: 16px;
  color: #E15151;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
}

.c5:hover {
  color: #000000;
}

.c9 {
  min-height: 0;
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    border-bottom: solid 2px #000000;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    border-bottom: solid 2px #E15151;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    padding-bottom: 2px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 "
    role="tablist"
  >
    <div
      class="c2 "
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="c3"
        role="tab"
        type="button"
      >
        <div
          class="c4 c5"
        >
          <span
            class="c6"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="c3"
        role="tab"
        type="button"
      >
        <div
          class="c7 c5"
        >
          <span
            class="c8"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="c9"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs change to second tab 2`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <div
    class="StyledBox-sc-1etxkdl-0 iRTtrq StyledTabs-shzzml-2 ickkPT"
    role="tablist"
  >
    <div
      class="StyledBox-sc-1etxkdl-0 dihUnM StyledTabs__StyledTabsHeader-shzzml-0 dDSGkc"
    >
      <button
        aria-expanded="false"
        aria-selected="false"
        class="StyledButton-sc-1hmw3c5-0 iOsBTY"
        role="tab"
        type="button"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 XqThZ StyledTab-kic4tf-0 WuQmz"
        >
          <span
            class="StyledText-sc-3e83s1-0 idwpbv"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="true"
        aria-selected="true"
        class="StyledButton-sc-1hmw3c5-0 iOsBTY"
        role="tab"
        type="button"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 dKTpiF StyledTab-kic4tf-0 WuQmz"
        >
          <span
            class="StyledText-sc-3e83s1-0 iAGjGD"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 2 Tab Contents"
      class="StyledTabs__StyledTabPanel-shzzml-1 cPBQTP"
      role="tabpanel"
    >
      Tab body 2
    </div>
  </div>
</div>
`;

exports[`Tabs complex title 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
  border-bottom: solid 2px #000000;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 2px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
  border-bottom: solid 2px #E15151;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 2px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
}

.c5:hover {
  color: #000000;
}

.c7 {
  min-height: 0;
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    border-bottom: solid 2px #000000;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c6 {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c6 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c6 {
    border-bottom: solid 2px #E15151;
  }
}

@media only screen and (max-width:512px) {
  .c6 {
    padding-bottom: 2px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    role="tablist"
  >
    <div
      className="c2 "
    >
      <button
        aria-expanded={true}
        aria-selected={true}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c4 c5"
        >
          <div>
            Tab 1
          </div>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-selected={false}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c6 c5"
        >
          <div>
            Tab 2
          </div>
        </div>
      </button>
    </div>
    <div
      aria-label="1 Tab Contents"
      className="c7"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs no Tab 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
  border-bottom: solid 2px #000000;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 2px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
}

.c5:hover {
  color: #000000;
}

.c6 {
  min-height: 0;
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    border-bottom: solid 2px #000000;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-bottom: 2px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    role="tablist"
  >
    <div
      className="c2 "
    >
      <button
        aria-expanded={true}
        aria-selected={true}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c4 c5"
        />
      </button>
    </div>
    <div
      aria-label="1 Tab Contents"
      className="c6"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`Tabs set on hover 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
  border-bottom: solid 2px #000000;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 2px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
  border-bottom: solid 2px #E15151;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 2px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c6 {
  font-size: 12px;
  line-height: 16px;
  color: #444444;
}

.c8 {
  font-size: 12px;
  line-height: 16px;
  color: #E15151;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
}

.c5:hover {
  color: #000000;
}

.c9 {
  min-height: 0;
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    border-bottom: solid 2px #000000;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    border-bottom: solid 2px #E15151;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    padding-bottom: 2px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 "
    role="tablist"
  >
    <div
      class="c2 "
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="c3"
        role="tab"
        type="button"
      >
        <div
          class="c4 c5"
        >
          <span
            class="c6"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="c3"
        role="tab"
        type="button"
      >
        <div
          class="c7 c5"
        >
          <span
            class="c8"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="c9"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs set on hover 2`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <div
    class="StyledBox-sc-1etxkdl-0 iRTtrq StyledTabs-shzzml-2 ickkPT"
    role="tablist"
  >
    <div
      class="StyledBox-sc-1etxkdl-0 dihUnM StyledTabs__StyledTabsHeader-shzzml-0 dDSGkc"
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="StyledButton-sc-1hmw3c5-0 iOsBTY"
        role="tab"
        type="button"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 dKTpiF StyledTab-kic4tf-0 WuQmz"
        >
          <span
            class="StyledText-sc-3e83s1-0 iAGjGD"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="StyledButton-sc-1hmw3c5-0 iOsBTY"
        role="tab"
        type="button"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 XqThZ StyledTab-kic4tf-0 WuQmz"
        >
          <span
            class="StyledText-sc-3e83s1-0 idwpbv"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="StyledTabs__StyledTabPanel-shzzml-1 cPBQTP"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs set on hover 3`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <div
    class="StyledBox-sc-1etxkdl-0 iRTtrq StyledTabs-shzzml-2 ickkPT"
    role="tablist"
  >
    <div
      class="StyledBox-sc-1etxkdl-0 dihUnM StyledTabs__StyledTabsHeader-shzzml-0 dDSGkc"
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="StyledButton-sc-1hmw3c5-0 iOsBTY"
        role="tab"
        type="button"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 dKTpiF StyledTab-kic4tf-0 WuQmz"
        >
          <span
            class="StyledText-sc-3e83s1-0 iAGjGD"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="StyledButton-sc-1hmw3c5-0 iOsBTY"
        role="tab"
        type="button"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 dKTpiF StyledTab-kic4tf-0 WuQmz"
        >
          <span
            class="StyledText-sc-3e83s1-0 jNYJoL"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="StyledTabs__StyledTabPanel-shzzml-1 cPBQTP"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs set on hover 4`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <div
    class="StyledBox-sc-1etxkdl-0 iRTtrq StyledTabs-shzzml-2 ickkPT"
    role="tablist"
  >
    <div
      class="StyledBox-sc-1etxkdl-0 dihUnM StyledTabs__StyledTabsHeader-shzzml-0 dDSGkc"
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="StyledButton-sc-1hmw3c5-0 iOsBTY"
        role="tab"
        type="button"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 dKTpiF StyledTab-kic4tf-0 WuQmz"
        >
          <span
            class="StyledText-sc-3e83s1-0 iAGjGD"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="StyledButton-sc-1hmw3c5-0 iOsBTY"
        role="tab"
        type="button"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 dKTpiF StyledTab-kic4tf-0 WuQmz"
        >
          <span
            class="StyledText-sc-3e83s1-0 jNYJoL"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="StyledTabs__StyledTabPanel-shzzml-1 cPBQTP"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs set on hover 5`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <div
    class="StyledBox-sc-1etxkdl-0 iRTtrq StyledTabs-shzzml-2 ickkPT"
    role="tablist"
  >
    <div
      class="StyledBox-sc-1etxkdl-0 dihUnM StyledTabs__StyledTabsHeader-shzzml-0 dDSGkc"
    >
      <button
        aria-expanded="true"
        aria-selected="true"
        class="StyledButton-sc-1hmw3c5-0 iOsBTY"
        role="tab"
        type="button"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 dKTpiF StyledTab-kic4tf-0 WuQmz"
        >
          <span
            class="StyledText-sc-3e83s1-0 iAGjGD"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded="false"
        aria-selected="false"
        class="StyledButton-sc-1hmw3c5-0 iOsBTY"
        role="tab"
        type="button"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 XqThZ StyledTab-kic4tf-0 WuQmz"
        >
          <span
            class="StyledText-sc-3e83s1-0 idwpbv"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      class="StyledTabs__StyledTabPanel-shzzml-1 cPBQTP"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs with icon + reverse 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: solid 2px #000000;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 2px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: solid 2px #E15151;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 2px;
}

.c6 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 4px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c7 {
  font-size: 12px;
  line-height: 16px;
  color: #444444;
}

.c9 {
  font-size: 12px;
  line-height: 16px;
  color: #E15151;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c5 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
}

.c5:hover {
  color: #000000;
}

.c10 {
  min-height: 0;
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    border-bottom: solid 2px #000000;
  }
}

@media only screen and (max-width:512px) {
  .c4 {
    padding-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c8 {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c8 {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

@media only screen and (max-width:512px) {
  .c8 {
    border-bottom: solid 2px #E15151;
  }
}

@media only screen and (max-width:512px) {
  .c8 {
    padding-bottom: 2px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
    role="tablist"
  >
    <div
      className="c2 "
    >
      <button
        aria-expanded={true}
        aria-selected={true}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c4 c5"
        >
          <svg
            color="text"
          />
          <div
            className="c6"
          />
          <span
            className="c7"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-selected={false}
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          className="c8 c5"
        >
          <span
            className="c9"
          >
            Tab 2
          </span>
          <div
            className="c6"
          />
          <svg
            color="control"
          />
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      className="c10"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;
